<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:background="#f4f3f3">



        <TextView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forcast_day_string"
            android:id="@+id/forecastDayTextView"
            android:gravity="center_vertical|center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forcast_date_text"
            android:id="@+id/forecastDateTextView"
            android:layout_weight="0.92" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forcast_high_label"
            android:id="@+id/textView13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forcast_high_string"
            android:id="@+id/forecastHighTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forcast_low_label"
            android:id="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forcast_low_string"
            android:id="@+id/foreCastLowTextView" />
    </LinearLayout>