<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zubilay.yahooweather.ForecastDetailActivity">






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="71dp"
        android:weightSum="1"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/purple"
                android:gravity="center_horizontal"
                android:foregroundGravity="center_horizontal" />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/forecastDetailHeaderTextView"
            android:text="HEADDER HEADER HEADER "
            android:layout_weight="0.15" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.03">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/forcast_day_string"
                    android:id="@+id/textView14"
                    android:background="#f1efef" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/forcast_day_string"
                    android:id="@+id/forecastDetailDayTextView" />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.01">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/forcast_date_label"
                    android:id="@+id/textView16"
                    android:background="#f1efef" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/forcast_date_text"
                    android:id="@+id/forecastDetailDateTextView"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="1"
            android:layout_weight="0.15">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="148dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/forcast_high_label"
                    android:id="@+id/textView19"
                    android:layout_weight="0.50"
                    android:background="#f1efef" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/forcast_high_string"
                    android:id="@+id/forecastDetailHighTextView"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/forcast_low_label"
                    android:id="@+id/textView20"
                    android:background="#f1efef" />

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/forcast_low_string"
                    android:id="@+id/forecastDetailLowTextView"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.11" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/conditions_label"
            android:id="@+id/textView23"
            android:gravity="center_horizontal"
            android:background="#f1efef" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/condition_string"
            android:id="@+id/forecastConditionsTextView"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" />

    </LinearLayout>


</RelativeLayout>
